<resources>
    <string name="app_name">Foursquare Recommendations</string>
    <string name="action_settings">Settings</string>

    <string name="dialog_place_title">Where do you want to explore?</string>
    <string name="dialog_place_hint">London...</string>

</resources>
